# do-the-math

./: .env.example  .gitignore  CLARICE.md  NOTES.md  README.md  SPEC.md  notes.md  run.sh
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/do_the_math/: __init__.py  clarification.py  describe.py  errors.py  formatting.py  graph_renderer.py  ir.py  math_engine.py  math_interpreter.py  router.py
backend/app/do_the_math/agents/: __init__.py  base.py  graphing.py
backend/app/do_the_math/providers/: __init__.py  anthropic_adapter.py  base.py  fake.py
backend/scripts/: live_check.py
backend/tests/: test_agents.py  test_anthropic_adapter.py  test_api.py  test_clarification.py  test_describe.py  test_graph_renderer.py  test_ir.py  test_math_engine.py  test_properties.py  test_smoke.py
demo/: README.md
frontend/: .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: slice.spec.ts  smoke.spec.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  plotly.d.ts  types.ts
frontend/src/components/: ApiKeyScreen.test.tsx  ApiKeyScreen.tsx  AssistantMessage.tsx  BroughtBy.tsx  Chat.test.tsx  Chat.tsx  FeedbackLink.tsx  FeedbackScreen.test.tsx  FeedbackScreen.tsx  GraphView.tsx  ReasoningPanel.tsx
frontend/src/lib/: api.ts  feedback.ts  storage.test.ts  storage.ts
frontend/src/test/: setup.ts
